# neocourses

./: .gitignore  AGENTS.md  CLAUDE.md  REBUILD-PLAN.md  Status.md
.claude/: launch.json  settings.local.json
.claude/agents/: ai-content.md  css-design.md  mobile-rn.md  pairing-sync.md  react-frontend.md  rust-tauri.md  state-stores.md
.claude/commands/: add-import-type.md  add-theme-var.md  gen-outline.md  mobile-dev.md  new-component.md  new-screen.md  new-view.md  run-tests.md
.codex/agents/: ai-content.toml  css-design.toml  mobile-rn.toml  pairing-sync.toml  react-frontend.toml  rust-tauri.toml  state-stores.toml
course-mobile/: .gitignore  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
course-mobile/scripts/: sync-shared.js
course-mobile/src/: theme.ts
course-studio/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
course-studio/.claude/: launch.json
course-studio/src-tauri/: Cargo.toml  tauri.conf.json
course-studio/src-tauri/capabilities/: default.json
course-studio/src-tauri/icons/: icon.icns
course-studio/src-tauri/src/: lib.rs  main.rs
course-studio/src-tauri/src/commands/: export.rs  jobs.rs  mod.rs  model.rs  outline.rs  pairing.rs  window.rs
course-studio/src-tauri/src/utils/: errors.rs  filenames.rs  mod.rs  paths.rs
course-web/: .gitignore  README.md  STATUS.md  docker-compose.yml  middleware.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
course-web/lib/: quiz.ts  (+12 more)
docs/: ARCHITECTURE.md  LOCAL-LLM.md  PAIRING-PROTOCOL.md  STYLE-GUIDE.html
(+319 files in other folders)
