[package]
name = "course-studio"
version = "0.1.0"
description = "Course Studio Lite"
authors = []
edition = "2021"

[lib]
name = "course_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "course-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
mockito = "1"
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
